# backflow

./: .gitignore  Cargo.toml  HACKING.md  README.md  backflow.brokenithm.toml  backflow.device-example.toml  backflow.example.toml  backflow.test_chuniio.example.toml  composite.yaml  plumber.yaml
.github/workflows/: ci.yaml  codeql.yml
chunitroller/: chuni.html  index.html  keyboard.css  keyboard.html  script.js  styles.css  sw.js
crates/zbus-inputplumber/: Cargo.toml
crates/zbus-inputplumber/src/: lib.rs
crates/zbus-inputplumber/src/dbus/: org.shadowblip.Input.CompositeDevice.xml  org.shadowblip.Input.Gamepad.xml  org.shadowblip.Input.Keyboard.xml  org.shadowblip.Input.Manager.xml  org.shadowblip.Input.Mouse.xml  org.shadowblip.Input.Source.EventDevice.xml  org.shadowblip.Input.UdevDevice.xml
crates/zbus-inputplumber/src/interface/: composite_device.rs  dbus_device.rs  event_device.rs  gamepad.rs  generate_bindings.sh  hidraw_device.rs  input_manager.rs  keyboard.rs  mod.rs  mouse.rs  target.rs  udev_device.rs
crates/zbus-inputplumber/src/interface/source/: event_device.rs  hidraw_device.rs  mod.rs  udev_device.rs
docs/: chunikb.segatools.ini
docs/reference/chuniio/: README.md  chu2to3.c  chu2to3.h  chuniio.c  chuniio.h  config.c  config.h  leddata.h  ledoutput.c  ledoutput.h  meson.build  pipeimpl.c  pipeimpl.h  serialimpl.c  serialimpl.h
docs/reference/mai2io/: README.md  config.c  mai2io.c  meson.build
src/: backend.rs  config.rs  device_filter.rs  lib.rs  main.rs
src/feedback/: mod.rs  websocket.rs
src/feedback/generators/: chuni_jvs.rs  mod.rs
src/input/: mod.rs  websocket.rs
src/input/brokenithm/: idevice_proxy.rs  mod.rs
src/input/unix_socket/: mod.rs
src/input/web/: frontend.rs  mod.rs  server.rs
src/output/: dummy.rs  mod.rs  plumber_dbus.rs
src/output/chuniio_proxy/: mod.rs
src/output/udev/: mod.rs
src/protos/: chuniio.rs  mod.rs
web/: chuni.html  index.html  keyboard.html  manifest.json  package.json  rgb_test.html  script.js  styles.css
web/custom/: example.html
web/custom/example/: example.html
web/templates/: chuni.css  chuni.html  chuniio.html  keyboard.html  taiko.css  taiko.html
