[package]
name = "backflow"
version = "0.1.0"
edition = "2024"
[workspace]
members = ["crates/zbus-inputplumber"]


[dependencies]
async-trait = "0.1.83"
axum = { version = "0.8.4", features = ["ws"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
evdev = { version = "0.13.1", features = ["tokio", "stream-trait"] }
eyre = "0.6.12"
futures-util = "0.3.31"
nix = "0.30.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = [
    "rustls",
    "tokio-rustls",
] }
toml = "0.8.23"
tower = { version = "0.5.2", features = ["tokio", "tracing"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tracing = { version = "0.1.41", features = [
    "async-await",
    "release_max_level_info",
] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
udev = "0.9.3"
uinput = "0.1.3"
zbus = "5.7.1"
zbus-inputplumber = { path = "crates/zbus-inputplumber" }
