[package]
name = "zbus-inputplumber"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
zbus = "5"
zvariant = "5"
serde = { version = "1.0", features = ["derive"] }
async-dropper = { version = "0.3", features = ["tokio", "derive"] }
async-trait = "0.1.88"
